<?xml version="1.0"?>
<package format="3">
  <name>vive_teleop</name>
  <version>0.5.0</version>
  <description>A HTC vive interface to control Tiago</description>

  <maintainer email="chenjuotung@gmail.com">Bence Magyar</maintainer>
  <author email="chenjuotung@gmail.com">Paul Mathieu</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosservice</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>teleop_tools_msgs</exec_depend>
  <!-- <depend>moveit_servo</depend> -->
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_servo</depend>  
</package>
